[build-system]
requires = [
    "scikit-build-core>=0.11.5",
    "pybind11>=3.0.0",
    # Add numpy to build requirements for headers
    "numpy>=2.0.2",
    # patchelf is needed during install to set RPATH on Linux
    "patchelf>=0.17.2.4; sys_platform == 'linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "mmgpy"
version = "0.9.0.dev0"
description = "Python bindings for the MMG software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "meshio>=5.3.5,<6",
    "numpy>=2.0.2,<3",
    "patchelf>=0.17.2.4,<1; sys_platform == 'linux'",
    "pyvista>=0.47,<1",
    "rich>=13.0.0,<15",
    "scipy>=1.11.0,<2",
    "typing-extensions>=4.0.0,<5; python_version < '3.11'",
]
authors = [{ name = "Kevin Marchais", email = "kevinmarchais@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# Optional dependencies for pip/uvx users (e.g., pip install mmgpy[ui])
# Note: dependency-groups below are for local dev with uv sync --group <name>
[project.optional-dependencies]
ui = [
    "pywebview>=6.1,<7",
    "trame>=3.12.0,<4",
    "trame-vtk>=2.10.2,<3",
    "trame-vtklocal>=0.16.0,<1",
    "trame-vuetify>=3.2.0,<4",
]

[tool.mmgpy]
mmg_version = "5.8.0"

[tool.uv]
# Allow editable installs without --no-build-isolation flag
no-build-isolation-package = ["mmgpy"]

[tool.scikit-build]
# Build configuration
build.verbose = true
cmake.version = ">=3.15"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
cmake.define = { BUILD_TESTING = "OFF", BUILD_SHARED_LIBS = "ON", MMGPY_SKIP_EXECUTABLES = "OFF" }

build-dir = "build"

# Editable install configuration (auto-rebuild when C++ files change)
editable.rebuild = true
editable.verbose = false

# Wheel configuration
wheel.packages = ["src/mmgpy"]

# Source distribution
sdist.include = ["CMakeLists.txt", "src/*", "extern/*", "scripts/*"]
sdist.exclude = ["vtk*/**", "vtk*.tar.gz", "*.mesh", "*.sol", "*.vtk"]

# Scripts entry points - wrappers that find and run native MMG executables.
# Native executables (mmg3d_O3, mmg2d_O3, mmgs_O3) are installed to mmgpy/bin/
# and symlinked to venv/bin/ by CMake. These wrapper entry points provide
# shorter command names (mmg3d, mmg2d, mmgs) and the unified 'mmg' command.
[project.scripts]
mmgpy = "mmgpy._cli:_run_mmg"
mmg = "mmgpy._cli:_run_mmg"
mmg2d = "mmgpy._cli:_run_mmg2d"
mmg3d = "mmgpy._cli:_run_mmg3d"
mmgs = "mmgpy._cli:_run_mmgs"

[project.entry-points."mmgpy.ui"]
ui = "mmgpy.ui:run_ui"

[project.gui-scripts]
mmgpy-ui = "mmgpy.ui.__main__:main"

[dependency-groups]
dev = [
    # Build dependencies (needed for editable installs without build isolation)
    "scikit-build-core>=0.11.5",
    "pybind11>=3.0.0",
    "numpy>=2.0.2",
    # Dev tools
    "build>=1.4.0",
    "imageio>=2.37.2",
    "mypy>=1.19.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.10",
    "pytest-codeblocks>=0.17.0",
]
docs = [
    "mike>=2.0.0,<3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
ui = [
    "pywebview>=6.1",
    "trame>=3.12.0",
    "trame-vtk>=2.10.2",
    "trame-vtklocal>=0.16.0",
    "trame-vuetify>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "bench_*.py"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incompatible with D211 (no-blank-line-before-class)
    "D213",   # incompatible with D212 (multi-line-summary-first-line)
    "COM812", # conflicts with formatter
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/conftest.py" = [
    "INP001",  # docs/ is not a package, conftest.py doesn't need __init__.py
]
"src/mmgpy/_sol.py" = [
    "C901",    # parse_sol_file has inherent complexity from the Medit format
    "PLR0912", # many branches for different solution types (scalar, vector, tensor)
    "PLR0915", # many statements in sol file parser
    "PLR2004", # magic values (1, 2, 3) are Medit solution type codes
]
"src/mmgpy/_remesh.py" = [
    "FBT002",  # transfer_fields has a boolean default for consistency with Mesh.remesh()
    "N801",    # class names match C++ API (mmg2d, mmg3d, mmgs)
    "PLR0913", # _wrapped_remesh mirrors C++ function signatures
]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "T201",    # print statements allowed in tests for debugging
    "SLF001",  # accessing private members allowed in tests
    "BLE001",  # broad exception catching allowed in tests
    "PLC0415", # imports inside functions are intentional for fixtures
    "N806",    # uppercase variable names for matrices (M, D, H) standard in math
    "PLR2004", # magic values allowed in tests
    "PLR0913", # many arguments allowed in test helper functions
    "S603",    # subprocess calls allowed in tests
    "S607",    # partial executable paths allowed in tests
    "TC003",   # pathlib import in runtime allowed for test fixtures
    "ANN",     # type annotations not required for tests
]
".github/scripts/**/*.py" = [
    "INP001",  # CI scripts are not a package
    "T201",    # print statements needed for CI output
    "PLR2004", # magic values (like argument counts) are fine in scripts
    "C901",    # complex wheel optimization function is acceptable
    "PLR0912", # many branches in wheel optimization is acceptable
    "PLR0915", # many statements in wheel optimization is acceptable
]
"src/mmgpy/metrics.py" = [
    "N806",    # uppercase variable names for matrices (M, D, H) standard in math
    "N803",    # uppercase argument names for matrices standard in math
    "PLR2004", # magic values (2, 3, 6) are dimension constants in math code
    "C901",    # complex functions acceptable for mathematical algorithms
]
"examples/**/*.py" = [
    "T201",    # print statements essential for example output
    "PLR0913", # many arguments allowed for clarity in examples
    "PLR0915", # long functions allowed for comprehensive examples
    "PERF401", # list comprehensions not required in examples (readability first)
    "PTH123",  # open() is fine for simple examples
    "PLR2004", # magic values allowed in examples
    "N806",    # uppercase variable names for matrices in examples
]
"scripts/**/*.py" = [
    "INP001",  # scripts are not a package
    "T201",    # print statements allowed in scripts
    "EXE001",  # shebang is fine in scripts
    "PLR2004", # magic values allowed in scripts
    "S603",    # subprocess calls are safe (calling our own executables)
]
"benchmarks/**/*.py" = [
    "S101",    # asserts allowed in benchmarks
    "PLR2004", # magic values allowed in benchmarks
    "INP001",  # benchmarks directory is not a package
    "TC002",   # third-party imports in runtime for type annotations
    "TC003",   # stdlib imports in runtime for type annotations
    "S603",    # subprocess calls are safe (calling our own executables)
    "S607",    # partial executable paths are intentional for benchmarks
    "PLC0415", # imports in functions are fine for benchmarks
    "T201",    # print statements used for timing reports
]
"src/mmgpy/__init__.py" = [
    "E402",   # imports after re-export of _find_mmg_executable
    "D417",   # self parameter doesn't need documenting for methods
    "PLR0915", # wrapper functions that patch multiple mesh classes have many statements
]
"src/mmgpy/_cli.py" = [
    "S603",    # subprocess calls with absolute paths to system tools are safe
    "C901",    # executable finder has many fallback paths
    "T201",    # print statements for CLI output
    "PLR0912", # many branches in executable search fallback paths
]
"src/mmgpy/_logging.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
]
"src/mmgpy/_progress.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
]
"src/mmgpy/_mmgpy.pyi" = [
    "PYI021",  # Docstrings intentionally included for IDE support (issue #111)
    "D418",    # Docstrings in @overload methods intentional for IDE support
]
"src/mmgpy/interactive/*.py" = [
    "PLC0415", # imports inside functions to avoid circular imports
]
"src/mmgpy/ui/**/*.py" = [
    # Trame/UI patterns
    "PLC0415", # imports inside functions for lazy loading
    "ARG002",  # unused kwargs in callbacks (trame pattern)
    "ANN",     # type annotations not required for UI callbacks
    "FBT",     # boolean positional args for debug flag
    "SIM117",  # nested withs for trame context managers
    "E501",    # long lines in UI strings (tooltips, JS expressions)
    # Complexity (parser and validation logic)
    "C901",    # complex functions in parsers and remeshing
    "PLR0911", # many returns in recursive AST evaluator
    "PLR0912", # many branches in parser and validation logic
    "PLR0915", # many statements in sol file parser
    "PLR2004", # magic values (MMG solution types, VTK cell types)
    # Error handling
    "BLE001",  # broad exception catching for UI error handling
    "S110",    # try-except-pass for optional features
    "SIM105",  # try-except-pass for optional feature detection
    # Exception messages
    "TRY003",  # exception messages are user-facing
    "TRY301",  # simple raises in validation code
    "EM101",   # string literals in exceptions for clarity
    "EM102",   # f-string in exceptions for user messages
    # Other
    "RUF001",  # unicode multiplication sign intentional (×)
    "RUF046",  # int(floor()) is explicit for significant figures
    "PLW2901", # loop variable reassignment in parsers.py
    "SIM102",  # nested ifs clearer in samples.py triangulate check
    "T201",    # print used for debug HTML output
]

[tool.ty.src]
# Exclude tests, scripts, examples, and certain modules from type checking
# Progress module uses union types that cause complex type inference issues
# Interactive module uses PyVista types that have incomplete stubs
# UI module uses trame which has no type stubs
exclude = ["tests/**", "scripts/**", "examples/**", "docs/**", "src/mmgpy/_progress.py", "src/mmgpy/interactive/**", "src/mmgpy/ui/**"]

[tool.ty.rules]
# Ignore unresolved imports for C++ extension module that isn't available at type-check time
unresolved-import = "ignore"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
# Skip 32-bit builds
skip = "*-win32 *-manylinux_i686"
test-command = 'python -c "import mmgpy"'
build-verbosity = 1

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} --exclude libmmg2d.so.5 --exclude libmmg3d.so.5 --exclude libmmgs.so.5 {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.coverage.run]
source = ["src/mmgpy"]
branch = true
omit = [
    "*/_mmgpy*",
    "*/interactive/*",  # PyVista UI code requires display, hard to test in CI
    "*/ui/__init__.py", # UI entry points require trame server
    "*/ui/__main__.py", # Entry point for UI
    "*/ui/app.py",      # Trame UI app requires browser
    "*/ui/viewer.py",   # Trame viewer mixin requires browser
    "*/ui/remeshing.py", # Trame remeshing mixin requires browser
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
