[build-system]
requires = [
    "scikit-build-core>=0.12.2",
    "pybind11>=3.0.4",
    # Add numpy to build requirements for headers
    "numpy>=2.1.0",
    # patchelf is needed during install to set RPATH on Linux
    "patchelf>=0.17.2.4; sys_platform == 'linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "mmgpy"
version = "0.17.0.dev0"
description = "Python bindings for the MMG software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0,<3",
    "patchelf>=0.17.2.4,<1; sys_platform == 'linux'",
    "rich>=13.0.0,<16",
    "scipy>=1.13.0,<2",
    "typing-extensions>=4.12.0,<5; python_version < '3.11'",
]
authors = [{ name = "Kevin Marchais", email = "kevinmarchais@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# Optional dependencies for pip/uvx users (e.g., pip install mmgpy[ui])
# Note: dependency-groups below are for local dev with uv sync --group <name>
[project.optional-dependencies]
fem = [
    "fedoo>=0.8.3,<1",
]
pyvista = [
    "pyvista>=0.48,<1",
]
ui = [
    "mmgpy[pyvista]",
    "pywebview>=6.2.1,<7",
    "trame>=3.13.1,<4",
    "trame-vtk>=2.11.6,<3",
    "trame-vtklocal>=0.17.1,<1",
    "trame-vuetify>=3.2.1,<4",
]

[tool.mmgpy]
mmg_version = "5.8.0"

[tool.uv]
# Allow editable installs without --no-build-isolation flag
no-build-isolation-package = ["mmgpy"]

[tool.scikit-build]
# Build configuration
build.verbose = true
cmake.version = ">=3.25"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
cmake.define = { BUILD_TESTING = "OFF", BUILD_SHARED_LIBS = "ON", MMGPY_SKIP_EXECUTABLES = "OFF" }

build-dir = "build"

# Editable install configuration (auto-rebuild when C++ files change)
editable.rebuild = true
editable.verbose = false

# Wheel configuration
wheel.packages = ["src/mmgpy"]

# Source distribution
sdist.include = ["CMakeLists.txt", "src/*", "extern/*", "scripts/*"]
sdist.exclude = ["vtk*/**", "vtk*.tar.gz", "*.mesh", "*.sol", "*.vtk"]

# Scripts entry points - the unified 'mmg' command auto-detects mesh type
# and remeshes via the Python API (no subprocess, single file read).
[project.scripts]
mmgpy = "mmgpy._cli:_run_mmg"
mmg = "mmgpy._cli:_run_mmg"

[project.entry-points."mmgpy.ui"]
ui = "mmgpy.ui:run_ui"

# PyVista 0.48 plugin registries: Medit reader/writer + .mmg accessor.
# These activate on first use (lazy) so users who never touch MMG pay nothing.
[project.entry-points."pyvista.readers"]
mesh = "mmgpy._pv_plugin:read_mesh"
meshb = "mmgpy._pv_plugin:read_mesh"

[project.entry-points."pyvista.writers"]
mesh = "mmgpy._pv_plugin:write_mesh"
meshb = "mmgpy._pv_plugin:write_mesh"

[project.entry-points."pyvista.accessors"]
mmg = "mmgpy._pv_plugin"

[project.gui-scripts]
mmgpy-ui = "mmgpy.ui.__main__:main"

[dependency-groups]
dev = [
    # Build dependencies (needed for editable installs without build isolation)
    "scikit-build-core>=0.12.2",
    "pybind11>=3.0.4",
    "numpy>=2.1.0",
    # Dev tools
    "build>=1.4.0",
    "imageio>=2.37.3",
    "meshio>=5.3.5,<6",
    "ty>=0.0.39",
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "pytest-examples>=0.0.18",
    "pytest-pyvista>=0.3.3",
    "pyvista>=0.48,<1",
]
docs = [
    "mike @ git+https://github.com/squidfunk/mike.git@2d4ad799442f4592db8ad53b179bfb33db8c69ac",
    "mkdocstrings-python>=2.0.0,<3",
    # Belt-and-braces: pymdown-extensions 10.21.2 fixed the html.escape(None)
    # crash that previously forced a `pygments<2.20` cap (see git history).
    "pymdown-extensions>=10.21.2",
    "zensical>=0.0.41,<0.1",
]
ui = [
    "pywebview>=6.2.1",
    "trame>=3.13.1",
    "trame-vtk>=2.11.6",
    "trame-vtklocal>=0.17.1",
    "trame-vuetify>=3.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "bench_*.py"]
image_cache_dir = "tests/image_cache"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # incompatible with D211 (no-blank-line-before-class)
    "D213",   # incompatible with D212 (multi-line-summary-first-line)
    "COM812", # conflicts with formatter
    # Project-wide opt-out (header boilerplate not wanted).
    "CPY001", # missing-copyright-notice
]

# Preview-rule enforcement is currently scoped to ``src/mmgpy/`` (the public
# API surface). Outside of it, these preview-only rules are noise:
#   - docstring coverage (DOC201/DOC402/DOC501/DOC502) is overkill for
#     tests, fixtures, examples, and CI scripts.
#   - PLC2701 / S404 / PLW1514 / FURB11x / FURB14x / FURB15x / RUF027 are
#     refactor suggestions ill-suited to throwaway / demo code.
# Add a new fire to this list when a future PR cleans it up inside src/mmgpy/.
# Globs cannot be reused in TOML, so the same list is repeated below for each
# non-src tree.
[tool.ruff.lint.extend-per-file-ignores]
"docs/**/*.py" = [
    "INP001",  # docs/ is not a package, conftest.py doesn't need __init__.py
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB118", "FURB142", "FURB152",         # preview refactors
    "RUF027",                                # preview missing-f-string
]
"src/mmgpy/_remesh.py" = [
    "N801",    # class names match C++ API (mmg2d, mmg3d, mmgs)
]
"src/mmgpy/_mesh.py" = [
    "PLR0904", # Mesh exposes the full public API (auto-detected 2D/3D/surface)
]
"src/mmgpy/_pv_plugin.py" = [
    "PLR0904", # PyVista accessor exposes the full public API surface
]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests
    "T201",    # print statements allowed in tests for debugging
    "SLF001",  # accessing private members allowed in tests
    "BLE001",  # broad exception catching allowed in tests
    "PLC0415", # imports inside functions are intentional for fixtures
    "N806",    # uppercase variable names for matrices (M, D, H) standard in math
    "PLR2004", # magic values allowed in tests
    "PLR0904", # test classes group many test methods
    "PLR0913", # many arguments allowed in test helper functions
    "PLR0914", # many locals allowed in test setup
    "PLR6301", # test methods don't need to use self
    "PLC1901", # tests assert empty-string sentinels literally
    "S603",    # subprocess calls allowed in tests
    "S607",    # partial executable paths allowed in tests
    "TC003",   # pathlib import in runtime allowed for test fixtures
    "ANN",     # type annotations not required for tests
    "INP001",  # tests/ subdirectories are intentional, not packages
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB118", "FURB142", "FURB152",         # preview refactors
    "RUF027",                                # preview missing-f-string
    "RUF069",                                # exact float assertions are intentional in tests
]
".github/scripts/**/*.py" = [
    "INP001",  # CI scripts are not a package
    "T201",    # print statements needed for CI output
    "PLR2004", # magic values (like argument counts) are fine in scripts
    "C901",    # complex wheel optimization function is acceptable
    "PLR0911", # multiple early returns in CLI dispatchers are clearer than nested branches
    "PLR0912", # many branches in wheel optimization is acceptable
    "PLR0915", # many statements in wheel optimization is acceptable
    "PLC0415", # lazy imports keep optional deps (e.g. ``packaging``) opt-in for fast paths
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB118", "FURB142", "FURB152",         # preview refactors
    "RUF027",                                # preview missing-f-string
]
"src/mmgpy/lagrangian.py" = [
    "PLR0913", # elasticity solver and move_mesh take genuinely required parameters
]
"examples/**/*.py" = [
    "T201",    # print statements essential for example output
    "PLR0913", # many arguments allowed for clarity in examples
    "PLR0914", # many locals allowed for didactic examples
    "PLR0915", # long functions allowed for comprehensive examples
    "PERF401", # list comprehensions not required in examples (readability first)
    "PTH123",  # open() is fine for simple examples
    "PLR2004", # magic values allowed in examples
    "N806",    # uppercase variable names for matrices in examples
    "INP001",  # examples/ subdirectories are not packages
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB113", "FURB118", "FURB142", "FURB152",  # preview refactors
    "RUF027",                                # preview missing-f-string
]
"scripts/**/*.py" = [
    "INP001",  # scripts are not a package
    "T201",    # print statements allowed in scripts
    "EXE001",  # shebang is fine in scripts
    "PLR2004", # magic values allowed in scripts
    "S603",    # subprocess calls are safe (calling our own executables)
    "ANN001", "ANN003",                      # one-off render scripts: types optional
    "C408",                                  # ``dict(...)`` reads better for kwargs bags
    "D103",                                  # nested helpers don't need docstrings
    "D205", "D301",                          # docstring style tolerances for scripts
    "E501",                                  # long lines OK in render configuration
    "I001",                                  # bpy must precede bmesh; isort can't know
    "E402",                                  # likewise — import order is load-order-sensitive
    "PLR0911", "PLR0912", "PLR0914", "PLR0915",  # render scripts are long by nature
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB118", "FURB142", "FURB152",         # preview refactors
    "RUF027",                                # preview missing-f-string
]
"benchmarks/**/*.py" = [
    "S101",    # asserts allowed in benchmarks
    "PLR2004", # magic values allowed in benchmarks
    "PLR0914", # many locals allowed in benchmark setup
    "PLR6301", # benchmark methods don't need to use self
    "INP001",  # benchmarks directory is not a package
    "TC002",   # third-party imports in runtime for type annotations
    "TC003",   # stdlib imports in runtime for type annotations
    "S603",    # subprocess calls are safe (calling our own executables)
    "S607",    # partial executable paths are intentional for benchmarks
    "PLC0415", # imports in functions are fine for benchmarks
    "T201",    # print statements used for timing reports
    "DOC201", "DOC402", "DOC501", "DOC502",  # preview docstring rules
    "PLC2701", "S404", "PLW1514",            # preview imports / IO
    "FURB113", "FURB118", "FURB142", "FURB152",  # preview refactors
    "RUF027",                                # preview missing-f-string
]
"src/mmgpy/__init__.py" = [
    "E402",   # imports after re-export of _find_mmg_executable
    "D417",   # self parameter doesn't need documenting for methods
    "PLR0915", # wrapper functions that patch multiple mesh classes have many statements
    "RUF067", # try/except for optional _version module is a packaging pattern
]
"src/mmgpy/_logging.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
]
"src/mmgpy/_progress.py" = [
    "PLC0415", # imports inside functions for optional Rich dependency
    "PLR0917", # _emit_event mirrors the progress callback signature (positional)
]
"src/mmgpy/_mmgpy.pyi" = [
    "PYI021",  # Docstrings intentionally included for IDE support (issue #111)
    "D418",    # Docstrings in @overload methods intentional for IDE support
]
"src/mmgpy/interactive/*.py" = [
    "PLC0415", # imports inside functions to avoid circular imports
]
"src/mmgpy/ui/**/*.py" = [
    # Trame/UI patterns
    "PLC0415", # imports inside functions for lazy loading
    "ARG002",  # unused kwargs in callbacks (trame pattern)
    "ANN",     # type annotations not required for UI callbacks
    "FBT",     # boolean positional args for debug flag
    "SIM117",  # nested withs for trame context managers
    "E501",    # long lines in UI strings (tooltips, JS expressions)
    # Complexity (parser and validation logic)
    "C901",    # complex functions in parsers and remeshing
    "PLR0911", # many returns in recursive AST evaluator
    "PLR0912", # many branches in parser and validation logic
    "PLR0914", # many locals in upload handlers and remeshing flow
    "PLR0915", # many statements in sol file parser
    "PLR2004", # magic values (MMG solution types, VTK cell types)
    # Error handling
    "BLE001",  # broad exception catching for UI error handling
    "S110",    # try-except-pass for optional features
    "SIM105",  # try-except-pass for optional feature detection
    # Exception messages
    "TRY003",  # exception messages are user-facing
    "TRY301",  # simple raises in validation code
    "EM101",   # string literals in exceptions for clarity
    "EM102",   # f-string in exceptions for user messages
    # Other
    "RUF001",  # unicode multiplication sign intentional (×)
    "RUF067",  # ui/__init__.py exposes top-level entry-point helpers
    "RUF046",  # int(floor()) is explicit for significant figures
    "PLW2901", # loop variable reassignment in parsers.py
    "SIM102",  # nested ifs clearer in samples.py triangulate check
    "T201",    # print used for debug HTML output
]
"blender_mmgpy/**/*.py" = [
    # ``bpy.utils.register_class()`` validates that an Operator / Panel
    # class name matches its ``bl_rna.identifier`` (e.g. ``MMGPY_OT_remesh``,
    # ``MMGPY_PT_main_panel``); CapWords would fail registration. Property
    # groups and AddonPreferences use CapWords already, so this only
    # applies to operator and panel definitions.
    "N801",
    # ``bpy.props.<Property>`` callables are referenced *only* in class
    # annotations (e.g. ``radius: FloatProperty(default=0.1)``). Blender's
    # add-on metaclass evaluates those annotations at ``register_class()``
    # time to materialise RNA property descriptors, so the names must be
    # reachable from the module's runtime globals. ``exempt-modules`` would
    # be the surgical fix, but it is a global setting and tweaking it
    # changes lint behaviour in ``src/mmgpy/`` too.
    "TC002",
]

[tool.ty.src]
# Keep ty's full-project pre-commit hook focused on the package source,
# matching `uv run ty check src/mmgpy/`.
include = ["src/mmgpy"]
# Exclude modules that rely on runtime integrations or incomplete third-party stubs.
# Progress module uses union types that cause complex type inference issues
# Interactive module uses PyVista types that have incomplete stubs
# UI module uses trame which has no type stubs
exclude = ["src/mmgpy/_progress.py", "src/mmgpy/interactive/**", "src/mmgpy/ui/**"]

[tool.ty.rules]
# Ignore unresolved imports for C++ extension module that isn't available at type-check time
unresolved-import = "ignore"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-*"
# Skip 32-bit builds, musllinux (pyvista depends on vtk which has no musllinux wheels),
# and free-threaded builds on Windows/macOS (vtk has no free-threaded wheels there)
skip = "*-win32 *-manylinux_i686 *-musllinux* cp314t-win* cp314t-macosx*"
test-command = 'python -c "import mmgpy"'
build-verbosity = 1

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} --exclude libmmg2d.so.5 --exclude libmmg3d.so.5 --exclude libmmgs.so.5 {wheel}"

[tool.cibuildwheel.macos]
archs = ["arm64"]
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# Force delvewheel to vendor the MSVC runtime into ``mmgpy.libs/`` with
# mangled names. Without ``--add-dll``, delvewheel treats MSVCP140 /
# VCRUNTIME140 as "system" DLLs and leaves the .pyd importing them by
# basename. That breaks inside hosts that preload an older MSVC runtime —
# notably Blender 4.2 LTS / 4.5 / 5.0, which ship MSVCP140 14.29 in
# ``blender.crt``; the Windows loader's basename cache then hands our
# wheel that older copy and we crash on the first stdlib call that
# requires 14.40+ symbols (issue #299). Mangled, vendored copies cannot
# collide and are guaranteed to match what the binaries were built
# against.
# ``--exclude`` the mmg DLLs because they already sit in ``mmgpy/`` next
# to the .pyd (the loader's ``LOAD_LIBRARY_SEARCH_DLL_LOAD_DIR`` finds
# them there at runtime). Without ``--exclude`` delvewheel tries to
# resolve them via the Windows DLL search path, doesn't find them, and
# aborts with ``FileNotFoundError: Unable to find library: mmg2d.dll``.
repair-wheel-command = "delvewheel repair --add-dll \"msvcp140.dll;msvcp140_1.dll;msvcp140_2.dll;msvcp140_atomic_wait.dll;msvcp140_codecvt_ids.dll;vcruntime140.dll;vcruntime140_1.dll;concrt140.dll\" --exclude \"mmg2d.dll;mmg3d.dll;mmgs.dll\" -w {dest_dir} {wheel}"

[tool.coverage.run]
source = ["src/mmgpy"]
branch = true
omit = [
    "*/_mmgpy*",
    "*/interactive/*",  # PyVista UI code requires display, hard to test in CI
    "*/ui/__init__.py", # UI entry points require trame server
    "*/ui/__main__.py", # Entry point for UI
    "*/ui/app.py",      # Trame UI app requires browser
    "*/ui/viewer.py",   # Trame viewer mixin requires browser
    "*/ui/remeshing.py", # Trame remeshing mixin requires browser
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
